# fastapi-template

./: Makefile  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
app/: config.py  database.py  dependencies.py  logging_config.py  models.py  schemas.py
app/routers/: api.py  health.py
app/services/: character_service.py  jutsu_service.py  task_service.py
